--- a/index.css
+++ b/index.css
@@ -121,6 +121,10 @@ h4 {
     background: #666666;
 }
 
+.search-bar button:active {
+    background: #a2a2a2;
+}
+
 /* main */
 
 .main {
@@ -197,6 +201,10 @@ h4 {
 .title-watchlist-btn:hover {
     background: rgb(29, 56, 34);
     cursor: pointer;
+}
+
+.title-watchlist-btn:active {
+    background: rgb(78, 154, 92);
 }
 
 /* title clicked */
